--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
     <img src="images/ticket.png" alt="Cupom de desconto">
   </aside>
 
+  <script src="js/bubbles.js"></script>
+
 </body>
 
 </html>
